<resources>
    <string name="app_name">&appname;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="debug_info">Debug info</string>
    <string name="action_settings">Settings</string>
    <string name="update_topology_available">Network map update available</string>
    <string name="update_topology_update_action">Update</string>
    <string name="update_topology_progress">Updating network map %d%%</string>
    <string name="update_topology_cancel_action">Cancel</string>
    <string name="update_topology_success">Network map updated</string>
    <string name="update_topology_failure">Error updating network map</string>
    <string name="nav_home">Home</string>
    <string name="nav_plan_route">Plan route</string>
    <string name="nav_map">Map</string>
    <string name="nav_disturbances">Disturbances</string>
    <string name="nav_infrastructure">Infrastructure</string>
    <string name="nav_notif">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="nav_about">About &appname;</string>
    <string name="status_not_yet_implemented">Not implemented yet</string>
    <string name="status_loading">Loading…</string>
    <string name="frag_about_title">About</string>
    <string name="frag_about_header" translatable="false">@string/app_name</string>
    <string name="frag_about_copyright">Copyright © 2017–2020 The UnderLX Team\nIn association with the Segvault group</string>
    <string name="frag_about_datasets">Network maps</string>
    <string name="frag_about_version">Version %s</string>
    <string name="frag_about_disclaimer">This app and associated service have no affiliation with Metropolitano de Lisboa, E.P.E.\nWe cannot guarantee the correctness of the displayed information.</string>
    <string name="frag_about_thirdparty">Included components</string>
    <string name="frag_about_thanks_title">Special thanks</string>
    <string name="frag_about_thanks">SkyscraperCity Portuguese community\nkidrauhl - UI translation\n%s - navigation drawer picture</string>
    <string name="frag_about_aosp_legal">This software contains code derived from code developed by The Android Open Source Project</string>
    <string name="dataset_info_version">Version: %s</string>
    <string name="dataset_info_authors">Authors</string>
    <string name="dataset_info_update">Update</string>
    <string name="frag_lines_line_status">Line status</string>
    <string name="frag_lines_error_updating">Failed to update line status</string>
    <string name="frag_lines_updated">Updated %s</string>
    <string name="frag_lines_duration">for %d minutes</string>
    <string name="frag_lines_cars">%d cars</string>
    <string name="frag_lines_until">until %s</string>
    <string name="frag_lines_report_disruptions">Report disruptions</string>
    <string name="frag_map_title">Map</string>
    <string name="frag_map_mock_location">Mock location</string>
    <string name="frag_disturbances_title">Disturbances</string>
    <string name="frag_disturbances_empty">Information not available</string>
    <string name="frag_disturbance_ongoing">Ongoing</string>
    <string name="frag_disturbance_line">%s line</string>
    <string name="frag_disturbance_notes">Notes from the &appname; team:</string>
    <string name="frag_disturbances_bottom"><![CDATA[Check the complete disturbance history at <a href=\'https://perturbacoes.pt/d\'>Perturbações.pt</a>.]]></string>
    <string name="frag_notif_title">Notifications</string>
    <string name="frag_notif_disturbance_title">Disturbance notifications</string>
    <string name="frag_notif_lines">Lines</string>
    <string name="frag_notif_schedule">Schedule</string>
    <string name="frag_notif_summary_lines">Showing notifications for lines: %s</string>
    <string name="frag_notif_summary_no_lines">Disturbance notifications disabled</string>
    <string name="frag_notif_show_regularization">Show regularization notifications</string>
    <string name="frag_notif_show_regularization_summary">\"Regular service\" / \"Circulação normal\" notifications</string>
    <string name="frag_notif_show_community_reported">Notify about community reports</string>
    <string name="frag_notif_show_community_reported_summary">Show notifications for service disruptions reported by other users</string>
    <string name="frag_notif_announcement_title">Announcement notifications</string>
    <string name="frag_notif_sources">Sources</string>
    <string name="frag_notif_summary_sources">Showing notifications for announcements from: %s</string>
    <string name="frag_notif_summary_no_sources">Announcement notifications disabled</string>
    <string name="pref_notifs_announcement_source_pt_ml_rss">Metro Website</string>
    <string name="pref_notifs_announcement_source_pt_ml_facebook">Metro Facebook page</string>
    <string name="frag_notif_ringtone">Ringtone</string>
    <string name="frag_notif_regularization_ringtone">Regularization ringtone</string>
    <string name="frag_notif_ringtone_none">None</string>
    <string name="frag_notif_vibrate">Vibrate</string>
    <string name="frag_notif_summary_silent">Silent</string>
    <string name="frag_notif_regularization_vibrate">Vibrate on regularization</string>
    <string name="frag_route_title">Plan route</string>
    <string name="frag_route_origin_station">Starting station</string>
    <string name="frag_route_destination_station">Destination station</string>
    <string name="frag_route_instructions">Pick a starting point and a destination to see the recommended route.</string>
    <string name="developer_website" translatable="false">https://segvault.tny.im</string>
    <string name="posplay_website" translatable="false">https://posplay.underlx.com</string>
    <string name="notif_disturbance_title">%s line</string>
    <string name="frag_route_short_cars_now_warning">Currently, trains on this line are shorter than usual (%1$d cars instead of %2$d). Look for the CCTV screens at one edge of the platform and await the train on that half.</string>
    <string name="frag_route_short_cars_warning">On this line, trains are shorter. Look for the CCTV screens at one edge of the platform and await the train on that half.</string>
    <string name="frag_route_disturbances_warning">Ongoing disturbances. The waiting time may be longer than usual.</string>
    <string name="frag_route_station_short_cars_warning">In this station, some lines run shorter trains. Look for the CCTV screens at one edge of the platform and stay in that half of the platform.</string>
    <string name="frag_route_line_name">%s line</string>
    <string name="frag_route_direction"><![CDATA[Direction <font color=\'black\'><big>%s</big></font>]]></string>
    <string name="frag_route_station_closed_extended">Station %s is closed for an extended period. An alternative station was suggested.</string>
    <string name="frag_route_station_closed_schedule">Station %s is currently closed for service. An alternative station was suggested.</string>
    <string name="frag_route_start_navigation">Start</string>
    <string name="frag_route_adapt_realtime">Adapt route to current conditions</string>
    <string name="frag_route_swap_choices">Swap origin and destination</string>
    <string name="notif_route_catch_train_title">Catch a train to %s</string>
    <string name="notif_route_enter_station_title">Enter station %s</string>
    <string name="notif_route_catch_train_status">Catch a train to %s</string>
    <string name="notif_route_catch_train_line_change_title">Change to %s line</string>
    <string name="notif_route_line_change_title">At %1$s, change to %2$s line</string>
    <string name="notif_route_line_change_status">Change to %1$s line and catch a train to %2$s</string>
    <string name="notif_route_leave_train">Leave at %s</string>
    <string name="notif_route_leave_train_next">Leave at the next station</string>
    <string name="notif_route_leave_train_now">Leave the train</string>
    <string name="notif_route_current_station">Currently at %s</string>
    <string name="notif_route_navigating_status">Navigating to %s</string>
    <string name="notif_route_left_station">Left station…</string>
    <string name="notif_route_direction">Direction %s</string>
    <string name="notif_route_next_station">Next station: %s</string>
    <string name="notif_route_waiting">Waiting for train…</string>
    <string name="notif_route_end_navigation">Exit navigation</string>
    <string name="notif_route_report">Service disruptions?</string>
    <string name="notif_route_vehicle_etas_title">Next trains:</string>
    <string name="frag_disturbance_menu_refresh">Refresh</string>
    <string name="frag_disturbance_updated">Disturbance list updated</string>
    <string name="frag_home_menu_refresh">Refresh</string>
    <string name="error_no_connection">No connection</string>
    <string name="error_no_connection_action_retry">Retry</string>
    <string name="error_generic_action_retry">Retry</string>
    <string name="nav_trip_history">Trip history</string>
    <string name="frag_trip_history_title">Trip history</string>
    <string name="frag_trip_history_empty">No trips yet</string>
    <string name="frag_station_connections">Connections</string>
    <string name="frag_station_vehicle_etas">Next trains</string>
    <string name="frag_station_bus">Bus terminal</string>
    <string name="frag_station_boat">Ferry</string>
    <string name="frag_station_train">Train</string>
    <string name="frag_station_airport">Airport</string>
    <string name="frag_station_taxi">Taxicab stand</string>
    <string name="frag_station_accessibility">Accessibility</string>
    <string name="frag_station_reduced_mobility">Reduced mobility</string>
    <string name="frag_station_lift_surface">Lobby-surface lift</string>
    <string name="frag_station_lift_platform">Lobby-platforms lift</string>
    <string name="frag_station_escalator_surface">Lobby-surface escalator</string>
    <string name="frag_station_escalator_platform">Lobby-platforms escalator</string>
    <string name="frag_station_wheelchair_platform">Wheelchair platform</string>
    <string name="frag_station_wc">WC</string>
    <string name="frag_station_baby_care">Baby care</string>
    <string name="frag_station_stores">Stores</string>
    <string name="frag_station_ticket_office">Ticket office</string>
    <string name="frag_station_urgent_ticket">Urgent Lisboa Viva pass office</string>
    <string name="frag_station_navegante_space">Navegante space</string>
    <string name="frag_station_client_space">Client space</string>
    <string name="frag_station_info_space">Information space</string>
    <string name="frag_map_zoom_out">Zoom out</string>
    <string name="frag_map_zoom_in">Zoom in</string>
    <string name="dataset_info_cache_all_extras">Download extra content</string>
    <string name="intro_announcements_title">Announcement notifications</string>
    <string name="intro_announcements_desc">Be notified about new posts on the Metro website and official Facebook page</string>
    <string name="intro_announcements_select_sources">Enable notifications</string>
    <string name="intro_announcements_select_lines_instruction">Show notifications for announcements on:</string>
    <string name="frag_map_switch_type">Switch map type</string>
    <string name="act_report_intro">Be the eyes of &appname; in the network and help collect better information.</string>
    <string name="act_report_instructions">If you are currently witnessing disruptions of the Metro service, such as waiting times that are too high for the current time of day, train or platform overcrowding, or incidents with passengers, select the affected lines:</string>
    <string name="act_report_send">Report service disruption</string>
</resources>