<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/main_group" android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />
        <item android:id="@+id/nav_plan_route" android:icon="@drawable/ic_menu_directions_subway"
            android:title="@string/nav_plan_route" />
        <item android:id="@+id/nav_trip_history" android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/nav_trip_history" />
        <item android:id="@+id/nav_map" android:icon="@drawable/ic_menu_map"
            android:title="@string/nav_map" />
    </group>

    <group android:id="@+id/status_group" android:checkableBehavior="single">
        <item android:id="@+id/nav_disturbances" android:icon="@drawable/ic_menu_announcement"
            android:title="@string/nav_disturbances" />
        <item android:id="@+id/nav_infrastructure" android:icon="@drawable/ic_menu_escalator"
            android:title="@string/nav_infrastructure" />
    </group>

    <group android:id="@+id/settings_group" android:checkableBehavior="single">
        <item android:id="@+id/nav_notif" android:icon="@drawable/ic_menu_notifications"
            android:title="@string/nav_notif" />
        <item android:id="@+id/nav_settings" android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_settings" />
    </group>

    <group android:id="@+id/meta_group" android:checkableBehavior="single">
        <item android:id="@+id/nav_help" android:title="@string/nav_help_feedback" />
        <item android:id="@+id/nav_about" android:title="@string/nav_about" />
    </group>

</menu>
