<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/frag_notif_disturbance_title">
        <MultiSelectListPreference
            android:defaultValue="@array/default_notif_lines"
            android:key="pref_notifs_lines"
            android:title="@string/frag_notif_lines" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:key="pref_notifs_ringtone"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/frag_notif_ringtone">

        </RingtonePreference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_notifs_vibrate"
            android:title="@string/frag_notif_vibrate" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_notifs_service_resumed"
            android:summary="@string/frag_notif_show_regularization_summary"
            android:title="@string/frag_notif_show_regularization" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="pref_notifs_service_resumed"
            android:key="pref_notifs_regularization_ringtone"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/frag_notif_regularization_ringtone"></RingtonePreference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_notifs_service_resumed"
            android:key="pref_notifs_regularization_vibrate"
            android:title="@string/frag_notif_regularization_vibrate" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/frag_notif_announcement_title">
        <MultiSelectListPreference
            android:defaultValue="@array/default_announcement_sources"
            android:key="pref_notifs_announcement_sources"
            android:title="@string/frag_notif_sources" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:key="pref_notifs_announcement_ringtone"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/frag_notif_ringtone">

        </RingtonePreference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_notifs_announcement_vibrate"
            android:title="@string/frag_notif_vibrate" />
    </PreferenceCategory>

</PreferenceScreen>