<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_swap_map"
        android:icon="@drawable/ic_swap_horiz_white_24dp"
        android:title="@string/frag_map_switch_type"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_zoom_out"
        android:icon="@drawable/ic_zoom_out_white_24dp"
        android:title="@string/frag_map_zoom_out"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_zoom_in"
        android:icon="@drawable/ic_zoom_in_white_24dp"
        android:title="@string/frag_map_zoom_in"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_mock_location"
        android:checkable="true"
        android:icon="@drawable/ic_beenhere_black_24dp"
        android:title="@string/frag_map_mock_location"
        app:showAsAction="ifRoom"
        android:visible="false"/>
</menu>